// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textArea > renders correctly with size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_4c_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3 styles_size_large__hlf4vn8"
          id="_r_4c_"
          rows="3"
          style="--hlf4vn0: calc(0.5rem + 0px + 0px + 0px + 0px); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > renders correctly with size medium 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_46_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3 styles_size_medium__hlf4vn7"
          id="_r_46_"
          rows="3"
          style="--hlf4vn0: calc(0.5rem + 0px + 0px + 0px + 0px); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > renders correctly with size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodySmallStrong__m4c9owl style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_40_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3 styles_size_small__hlf4vn6"
          id="_r_40_"
          rows="3"
          style="--hlf4vn0: calc(0.5rem + 0px + 0px + 0px + 0px); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_1o_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-describedby="_r_1p_"
          aria-invalid="true"
          class="styles__hlf4vn3 styles_error_true__hlf4vn4 styles_size_large__hlf4vn8"
          id="_r_1o_"
          rows="3"
          style="--hlf4vn0: calc(0.5rem + 0px + 1rem + 0px + 0.25rem); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh52j"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
          id="_r_1p_"
          role="status"
        >
          success
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_1g_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-describedby="_r_1h_"
          aria-invalid="false"
          class="styles__hlf4vn3 styles_success_true__hlf4vn5 styles_size_large__hlf4vn8"
          id="_r_1g_"
          rows="3"
          style="--hlf4vn0: calc(0.5rem + 0px + 1rem + 0px + 0.25rem); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkza uv_icons_1sbwqkzg uv_icons_1sbwqkz1j"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              CheckCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14m3.844-8.791a.75.75 0 0 0-1.187-.918l-3.7 4.79-1.65-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh52j"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_success__m4c9owe style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_56__m4c9ow2u"
          id="_r_1h_"
          role="status"
        >
          success
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly when input is disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_k_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3 styles_size_large__hlf4vn8"
          disabled=""
          id="_r_k_"
          rows="3"
          style="--hlf4vn0: calc(0.5rem + 0px + 0px + 0px + 0px); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_q_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3 styles_size_large__hlf4vn8"
          id="_r_q_"
          readonly=""
          rows="3"
          style="--hlf4vn0: calc(0.5rem + 0px + 0px + 0px + 0px); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly when it is required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <div
        class="styles__toi52u0 styles_alignItems_flex-start_xxsmall__toi52uv styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.25rem_xxsmall__toi52u5j"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
          for="_r_10_"
        >
          Test
        </label>
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
        >
          *
        </span>
      </div>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3 styles_size_large__hlf4vn8"
          id="_r_10_"
          rows="3"
          style="--hlf4vn0: calc(0.5rem + 0px + 0px + 0px + 0px); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly with basic props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_0_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3 styles_size_large__hlf4vn8"
          id="_r_0_"
          rows="3"
          style="--hlf4vn0: calc(0.5rem + 0px + 0px + 0px + 0px); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render correctly with maxlength 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_18_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-invalid="false"
          class="styles__hlf4vn3 styles_size_large__hlf4vn8"
          id="_r_18_"
          maxlength="3"
          rows="3"
          style="--hlf4vn0: calc(0.5rem + 0px + 0px + 0px + 0px); field-sizing: fixed; min-block-size: calc(2px + 48px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        />
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh52j"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <div />
        <div
          class="style__m4c9ow0 style_prominence_weak__m4c9ow7 style_sentiment_neutral__m4c9owb style_variant_caption__m4c9owp style_undefined_compound_3__m4c9ow1d style_undefined_compound_67__m4c9ow35"
        >
          4/3
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render with AutoExpandMax 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_28_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-describedby="_r_29_"
          aria-invalid="true"
          class="styles__hlf4vn3 styles_error_true__hlf4vn4 styles_size_large__hlf4vn8"
          id="_r_28_"
          rows="3"
          style="--hlf4vn0: calc(0.5rem + 0px + 1rem + 0px + 0.25rem); field-sizing: fixed; max-block-size: calc(2px + 48px + 1.5rem); min-block-size: calc(2px + 48px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh52j"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
          id="_r_29_"
          role="status"
        >
          success
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render with AutoExpandMax and rows 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_2g_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-describedby="_r_2h_"
          aria-invalid="true"
          class="styles__hlf4vn3 styles_error_true__hlf4vn4 styles_size_large__hlf4vn8"
          id="_r_2g_"
          rows="2"
          style="--hlf4vn0: calc(0.5rem + 0px + 1rem + 0px + 0.25rem); field-sizing: fixed; max-block-size: calc(2px + 48px + 1.5rem); min-block-size: calc(2px + 32px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh52j"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
          id="_r_2h_"
          role="status"
        >
          success
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textArea > should render with auto rows 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
        for="_r_20_"
      >
        Test
      </label>
      <div
        class="styles__hlf4vn1"
      >
        <textarea
          aria-describedby="_r_21_"
          aria-invalid="true"
          class="styles__hlf4vn3 styles_error_true__hlf4vn4 styles_size_large__hlf4vn8"
          id="_r_20_"
          rows="2"
          style="--hlf4vn0: calc(0.5rem + 0px + 1rem + 0px + 0.25rem); field-sizing: content; min-block-size: calc(2px + 32px + 1.5rem);"
        >
          test
        </textarea>
        <div
          class="styles__hlf4vn2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
        >
          <svg
            class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <title>
              AlertCircleIcon
            </title>
            <path
              clip-rule="evenodd"
              d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        class="styles__x6hyh50 styles_gap_0.5rem_xxsmall__x6hyh52j"
        style="--_3mg8xe0: minmax(0, 1fr) min-content; --_3mg8xe1: minmax(0, 1fr) min-content; --_3mg8xe2: minmax(0, 1fr) min-content; --_3mg8xe3: minmax(0, 1fr) min-content; --_3mg8xe4: minmax(0, 1fr) min-content; --_3mg8xe5: minmax(0, 1fr) min-content;"
      >
        <span
          class="style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_danger__m4c9ow9 style_variant_caption__m4c9owp style_undefined_compound_0__m4c9ow1a style_undefined_compound_48__m4c9ow2m"
          id="_r_21_"
          role="status"
        >
          success
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
